2022-01-31  Karl Berry  <karl@freefriends.org>

	* xdvi.1.in: add 262144=find and 524288=files.
	Found by John Hawkinson, tlbuild 30 Jan 2022 23:11:10.

2022-01-26  Karl Berry  <karl@freefriends.org>

	* gui/print-log.h (info): don't declare unintended `info' variable
	with type. From Evan Miller, tex-k 26 Jan 2022 10:55:35.

2021-03-14  Karl Berry  <karl@freefriends.org>

	* string-utils.c (shell_escape_string): escape other shell
	metacharacters and whitespace.

2021-03-12  Norbert Preining  <norbert@preining.info>

	* string-utils.c (shell_escape_string): also escape &.

2021-03-14  Norbert Preining  <norbert@preining.info>

	* string-utils.c (shell_escape_string): also escape &.

2020-03-02  Karl Berry  <karl@freefriends.org>

	* main.c (is_good_dvi_file): avoid using strnlen, not present
	on Solaris.
	https://tug.org/pipermail/tlbuild/2020q1/004659.html

2020-03-01  Karl Berry  <karl@freefriends.org>

	* Import xdvi-22.87.04 from
	https://sourceforge.net/projects/xdvi/files/xdvik, includes
	changes made here.

2019-07-22  Karl Berry  <karl@freefriends.org>

	* psgs.c (initGS): don't use now-gone-from-ghostscript execute
	operator; from Paul Vojta.

2019-05-31  Karl Berry  <karl@freefriends.org>

	* ac/xdvik.ac (xdvi-x-toolkit): the default is always xaw,
	and has been for a long time. Nelson mail to tlbuild,
	31 May 2019 11:39:52.

2019-03-25  Karl Berry  <karl@freefriends.org>

	* xdvi.1.in: omit unused second font letter for option names.
	From Debian.

2018-01-17  Karl Berry  <karl@freefriends.org>

	* xdvi.1.in: remove trailing whitespace to placate Debian.
	Use \& instead of "," after end-of-line "e.g." for consistency.
	Remove spurious doubled words.

2018-01-17  Norbert Preining  <norbert@preining.info>

	* add .desktop file
	* Makefile.am: add desktop file installation

2017-08-07  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* Makefile.am: config.xdvi is installed under
	texmf-dist/dvips/xdvi, not texmf-dist/dvips/config.
